--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ Thumbs.db
 # Framework stuff #
 ###################
 .vagrant
+.pythonhistory
 
 # Private config files #
 ########################
